--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projeto 2</h1>
+                        <h1>modificado aqui</h1>
                         <h2>Alterado aqui - enviadon nosso código para o github</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
                             aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
